[package]
name = "crilog"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["morenol <morenol@users.noreply.github.com>"]
description = "CRI logs parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
thiserror = "1.0.30"
